# observatory

./: Cargo.toml  README.md  fufhtjlve8b9hsflno6vnglh5eiokfoj.darc  manifest
.agents/plans/phase5-m1-m2-ingest-projections-rollups/: 00-overview.md  01-tracking-and-envelope-reconciliation.md  02-proto-authoring-and-landing-control-plane.md  03-m0-completion-store-config-daemon.md  04-ci-hardening.md  05-m1-ingest-and-projections.md  06-obs-events-gen-and-m1-acceptance.md  07-m2-scrape-and-metrics-raw.md  08-m2-rollups-derived-metrics-rest.md  09-verification-and-handback.md  10-review-log.md
.beads/: metadata.json
.github/workflows/: ci.yaml
ci/: dev-observatoryd.toml
crates/obs-derive/: Cargo.toml
crates/obs-derive/src/: derived.rs  fold.rs  lib.rs  rate.rs  ticker.rs
crates/obs-derive/tests/: rollup_integration.rs
crates/obs-events-gen/: Cargo.toml
crates/obs-events-gen/src/: lib.rs  main.rs  publish.rs  sim.rs  verify.rs  vocab.rs
crates/obs-http/: Cargo.toml
crates/obs-http/src/: api.rs  lib.rs
crates/obs-http/tests/: api.rs  healthz.rs
crates/obs-ingest/: Cargo.toml
crates/obs-ingest/src/: ack.rs  batcher.rs  feature_map.rs  lib.rs  service.rs  validate.rs
crates/obs-ingest/tests/: determinism_replay.rs  ingest_integration.rs
crates/obs-scrape/: Cargo.toml
crates/obs-scrape/src/: intern.rs  lib.rs  parser.rs  scraper.rs
crates/obs-scrape/tests/: parser_golden.rs  scrape_end_to_end.rs
crates/obs-scrape/tests/fixtures/: control-plane.expected.json  control-plane.txt  determinism-hypervisor.expected.json  determinism-hypervisor.txt  exploration-orchestrator.expected.json  exploration-orchestrator.txt  input-synthesizer.expected.json  input-synthesizer.txt  malformed.expected.json  malformed.txt  prometheus-encoder.expected.json  prometheus-encoder.txt  replay-renderer.expected.json  replay-renderer.txt  snapshot-store.expected.json  snapshot-store.txt  state-scorer.expected.json  state-scorer.txt
crates/obs-store/: Cargo.toml
crates/obs-store/benches/: write_batch.rs
crates/obs-store/src/: dump.rs  lib.rs  metrics.rs  pool.rs  projections.rs  schema.rs  writer.rs
crates/obs-store/tests/: insert_rate_smoke.rs  migration.rs
crates/obs-types/: Cargo.toml
crates/obs-types/src/: catalog.rs  lib.rs
crates/observatoryd/: Cargo.toml
crates/observatoryd/src/: config.rs  lib.rs  main.rs
docs/: event-contract-reconciliation-v1.md  proto-pin.md
evidence/phase5-m1-m2/: docs-tree-edits.diff  m0-writebatch-bench.txt  m1-determinism-gate.txt  m1-killnine.txt  m1-throughput.txt  m2-derived-fixture.txt  m2-rollup-properties.txt
scripts/: chaos-killnine.sh  throughput-smoke.sh
