[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"

[workspace.dependencies]
determinism-proto = { path = "../control-plane/crates/determinism-proto", default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "signal", "time"] }
tokio-stream = "0.1"
tonic = "0.14.6"
tonic-prost = "0.14.6"
prost = "0.14.4"
axum = "0.8"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.9"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
prometheus = "0.14"
thiserror = "2"
anyhow = "1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
