[package]
name = "obs-derive"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
obs-store = { path = "../obs-store" }
obs-types = { path = "../obs-types" }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
proptest = "1"
tempfile = { workspace = true }
