[package]
name = "obs-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
obs-store = { path = "../obs-store" }
obs-types = { path = "../obs-types" }
axum = { workspace = true }
prometheus = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tower = { workspace = true }
