[package]
name = "obs-scrape"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
obs-store = { path = "../obs-store" }
obs-types = { path = "../obs-types" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
# Not in [workspace.dependencies]; direct version per the package-07 plan
# (reqwest with rustls is sanctioned by ARCHITECTURE §1).
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[dev-dependencies]
axum = { workspace = true }
prometheus = { workspace = true }
serde = { workspace = true }
tempfile = { workspace = true }
