[package]
name = "obs-store"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
obs-types = { path = "../obs-types" }
prometheus = { workspace = true }
rusqlite = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
# Test-only failure injection (bulk-atomicity acceptance); never enabled
# by production dependents.
test-hooks = []

[dev-dependencies]
tempfile = { workspace = true }

[[bench]]
name = "write_batch"
harness = false
