[package]
name = "observatoryd"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
obs-derive = { path = "../obs-derive" }
obs-http = { path = "../obs-http" }
obs-ingest = { path = "../obs-ingest" }
obs-scrape = { path = "../obs-scrape" }
obs-store = { path = "../obs-store" }
obs-types = { path = "../obs-types" }
anyhow = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }

[[bin]]
name = "observatoryd"
path = "src/main.rs"
